Bug 831993 Replace nsISupportsArray with something better r=Standard8